# Advent-of-Code

./: .gitignore  CMakeLists.txt  cmake_build.py
SolutionManager/include/: data_retriever.hpp  solution.hpp  solution_factory.hpp  solution_manager.hpp
SolutionManager/src/: data_retriever.cpp  main.cpp  solution.cpp  solution_manager.cpp
Solutions/2023/day1/: day1.cpp  day1.hpp
